tests/dataset/tpc-ds/compiler/c/q74.error
/tmp/TestCCompiler_TPCDS_Goldenq742256284071/001/prog.c: In function ‘test_TPCDS_Q74_simplified’:
/tmp/TestCCompiler_TPCDS_Goldenq742256284071/001/prog.c:274:51: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  274 |   if (test_TPCDS_Q74_simplified_result.len != tmp1.len) {
      |                                                   ^
      |                                                   ->
/tmp/TestCCompiler_TPCDS_Goldenq742256284071/001/prog.c:278:60: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  278 |       if (test_TPCDS_Q74_simplified_result.data[i3] != tmp1.data[i3]) {
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_TPCDS_Goldenq742256284071/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq742256284071/001/prog.c:311:20: warning: implicit declaration of function ‘concat’ [-Wimplicit-function-declaration]
  311 |   int year_total = concat((c_item_list_t){0, NULL}, (c_item1_list_t){0, NULL});
      |                    ^~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq742256284071/001/prog.c:312:21: warning: implicit declaration of function ‘first’ [-Wimplicit-function-declaration]
  312 |   int s_firstyear = first(0);
      |                     ^~~~~
/tmp/TestCCompiler_TPCDS_Goldenq742256284071/001/prog.c:317:42: error: request for member ‘customer_id’ in something not a structure or union
  317 |       (result_t){.customer_id = s_secyear.customer_id,
      |                                          ^
/tmp/TestCCompiler_TPCDS_Goldenq742256284071/001/prog.c:318:50: error: request for member ‘customer_first_name’ in something not a structure or union
  318 |                  .customer_first_name = s_secyear.customer_first_name,
      |                                                  ^
/tmp/TestCCompiler_TPCDS_Goldenq742256284071/001/prog.c:319:49: error: request for member ‘customer_last_name’ in something not a structure or union
  319 |                  .customer_last_name = s_secyear.customer_last_name}};
      |                                                 ^
/tmp/TestCCompiler_TPCDS_Goldenq742256284071/001/prog.c:322:12: error: conflicting types for ‘result’; have ‘list_int’
  322 |   list_int result =
      |            ^~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq742256284071/001/prog.c:316:12: note: previous definition of ‘result’ with type ‘result_t[1]’
  316 |   result_t result[] = {
      |            ^~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq742256284071/001/prog.c:323:20: error: request for member ‘year_total’ in something not a structure or union
  323 |       ((s_firstyear.year_total > 0 && w_firstyear.year_total > 0 &&
      |                    ^
/tmp/TestCCompiler_TPCDS_Goldenq742256284071/001/prog.c:323:50: error: request for member ‘year_total’ in something not a structure or union
  323 |       ((s_firstyear.year_total > 0 && w_firstyear.year_total > 0 &&
      |                                                  ^
/tmp/TestCCompiler_TPCDS_Goldenq742256284071/001/prog.c:324:19: error: request for member ‘year_total’ in something not a structure or union
  324 |         (w_secyear.year_total / w_firstyear.year_total) >
      |                   ^
/tmp/TestCCompiler_TPCDS_Goldenq742256284071/001/prog.c:324:44: error: request for member ‘year_total’ in something not a structure or union
  324 |         (w_secyear.year_total / w_firstyear.year_total) >
      |                                            ^
/tmp/TestCCompiler_TPCDS_Goldenq742256284071/001/prog.c:325:23: error: request for member ‘year_total’ in something not a structure or union
  325 |             (s_secyear.year_total / s_firstyear.year_total))
      |                       ^
/tmp/TestCCompiler_TPCDS_Goldenq742256284071/001/prog.c:325:48: error: request for member ‘year_total’ in something not a structure or union
  325 |             (s_secyear.year_total / s_firstyear.year_total))
      |                                                ^
